SASS / Formation section mobile version done - Dashed divider fixed

--- a/content/themes/myCV/app/scss/layout/_education.scss
+++ b/content/themes/myCV/app/scss/layout/_education.scss
@@ -23,6 +23,10 @@
     }
 }
 
+.education-bac {
+    margin-bottom: -7rem;
+}
+
 /*--------------- DIVIDER ---------------*/
 
 .education-timeline {
