--- a/content/themes/myCV/app/scss/layout/_experience.scss
+++ b/content/themes/myCV/app/scss/layout/_experience.scss
@@ -22,6 +22,19 @@
     max-width: fit-content;
     margin: 0 auto;
 
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: -73px;
+        left: 50%;
+        transform: translateX(-50%);
+        border: 1.5px dashed $font-color-secondary;
+        opacity: .5;
+        border-radius: 2px;
+        z-index: -1;
+    }
+
     &__title {
         position: absolute;
         background-color: $font-color-secondary;
@@ -59,19 +72,6 @@
 .formation-timeline-list {
     position: relative;
 
-    &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        bottom: 1750px;
-        left: 50%;
-        transform: translateX(-50%);
-        border: 1.5px dashed $font-color-secondary;
-        opacity: .5;
-        border-radius: 2px;
-        z-index: -1;
-    }
-
     &::after {
         content: '';
         position: absolute;
@@ -86,10 +86,12 @@
     }
 }
 
-/*--------------- TIMELINE CONTENT ---------------*/
+/*-------------------------------------*
+            TIMELINE CONTENT
+*-------------------------------------*/
 
 .formation-timeline-list__item {
-    padding: 2rem 0;
+    padding: 1.5rem 0;
     
     &:first-child {
         padding-top: 4rem;
@@ -99,10 +101,23 @@
         text-align: center;
         font-weight: bold;
     }
+
+    // @media (min-width: $breakpoint-sm) {
+    //     &--right {
+    //         float: right;
+    //     }
+
+    //     &--left {
+    //         float: left;
+    //     }
+    // }
 }
+
+/*--------------- YEARS ---------------*/
 
 .formation-timeline-date-block {
     background-color: $special-color;
+    // border: 2px solid $color-primary;
     width: 80px;
     height: 80px;
     margin: 0 auto;
@@ -110,6 +125,60 @@
 
     &__content {
         position: relative;
-        top: 30px;
+        top: 28px;
+        font-family: $font-family-secondary;
     }
 }
+
+/*--------------- BLOCKS ---------------*/
+
+.formation-timeline-panel-container {
+    background-color: $font-color-secondary;
+    padding: 2rem 1rem;
+    position: relative;
+    border-radius: 4px;
+
+    .formation-timeline-panel-date-block {
+        background-color: $color-primary;
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        transform: translateY(-50%);
+        padding: .5rem .7rem;
+        font-size: 1rem;
+        font-style: italic;
+    }
+}
+
+/*--------------- BLOCKS CONTENT ---------------*/
+
+.formation-timeline-panel-content {
+    margin: .3rem 0;
+    color: $color-mad-skills;
+    
+
+    &__job-title {
+        font-family: $font-family-secondary;
+        color: $color-primary;
+        font-weight: bold;
+        font-size: 1rem;
+        line-height: 1.3rem;
+        letter-spacing: 1px;
+    }
+
+    &__info-block {
+        font-size: .9rem;
+        margin-top: 1rem;
+        line-height: 1.3rem;
+    }
+
+    .formation-inner-title {
+        font-weight: bold;
+        background-color: $special-color;
+        color: $font-color-secondary;
+        padding: 0 .2rem;
+    }
+}
+
+
+
